@@ -1,5 +1,4 @@
 
-
 body {
     width: 367px;
     margin-left: 8px;
@@ -11,7 +10,34 @@ h1 {
     border-bottom: solid 3px rgb(128,128,128);
 }
 
+dl {
+    overflow: hidden;
+}
+
 dt {
     clear: both;
     float: left;
+    text-align: right;
+    width: 96px;
+    margin: 0px;
+    padding: 2px;
+}
+
+dd {
+    float: left;
+    width: 263px;
+    margin: 0px;
+    padding: 2px;
+}
+
+select {
+    width: 100%;
+    margin: 0px;
+}
+
+input[type="text"] {
+    width: 257px;
+    margin: 0px;
+    border: solid 1px black;
+    padding: 2px;
 }
