@@ -1,3 +1,8 @@
+2017-09-16  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/popup/popup.css:
+	Define styles.
+
 2017-09-15  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/popup/popup.css:
